--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -31,10 +31,34 @@
     <%= form.text_field :age %>
   </div>
 
-  <div class="field">
+  <div class="field line">
     <%= form.label "備考" %>
     <%= form.text_area :content %>
   </div>
+
+  <hr>
+  
+  <%= form.fields_for :stations do |s| %>
+  
+  <h2>最寄り駅1</h2>
+  
+  <div class="field">
+    <%= s.label "路線名" %>
+    <%= s.text_field :line %>
+  </div>
+
+  <div class="field">
+    <%= s.label "駅名" %>
+    <%= s.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= s.label "徒歩分数" %>
+    <%= s.text_field :minute %>
+  </div>
+  
+  <% end %>
+  
   <% if request.path_info = new_room_path %>
   <div class="actions">
     <%= form.submit "登録する" %>
