--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<h2>閲覧</2>
 <p>
   <strong>物件名:</strong>
   <%= @room.name %>
@@ -24,6 +24,29 @@
   <strong>備考</strong>
   <%= @room.content %>
 </p>
+
+<hr>
+
+<% @stations.each do |station| %>
+
+<h3>最寄り駅1</h3>
+
+<p>
+  <strong>路線名</strong>
+  <%= station.line %>
+</p>
+
+<p>
+  <strong>駅名</strong>
+  <%= station.name %>
+</p>
+
+<p>
+  <strong>徒歩分数</strong>
+  <%= station.minute %>
+</p>
+
+<% end %>
 
 <%= link_to '編集', edit_room_path(@room) %> |
 <%= link_to '戻る', rooms_path %>
