--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -2,10 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.title {
-  display: table;
-}
+// .title {
+//   display: table;
+// }
 
-.content {
-  display: table-cell;
-}
+// .content {
+//   display: table-cell;
+// }
