--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,28 +5,28 @@
 <h1>物件一覧</h1>
 
 <table>
-  <thead　class="title">
-    <tr class="title">
-      <th class="content">物件名</th>
-      <th class="content">賃料</th>
-      <th class="content">住所</th>
-      <th class="content">築年数</th>
-      <th class="content">備考</th>
+  <thead>
+    <tr>
+      <th>物件名</th>
+      <th>賃料</th>
+      <th>住所</th>
+      <th>築年数</th>
+      <th>備考</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @rooms.each do |room| %>
-      <tr class="title">
-        <td class="content"><%= room.name %></td>
-        <td class="content"><%= room.rent %></td>
-        <td class="content"><%= room.address %></td>
-        <td class="content"><%= room.age %></td>
-        <td class="content"><%= room.content %></td>
-        <td class="content"><%= link_to '詳細', room %></td>
-        <td class="content"><%= link_to '編集', edit_room_path(room) %></td>
-        <td class="content"><%= link_to '削除', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr>
+        <td><%= room.name %></td>
+        <td><%= room.rent %></td>
+        <td><%= room.address %></td>
+        <td><%= room.age %></td>
+        <td><%= room.content %></td>
+        <td><%= link_to '詳細', room %></td>
+        <td><%= link_to '編集', edit_room_path(room) %></td>
+        <td><%= link_to '削除', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
